fix congratulation message on mobile and the reset btn

--- a/src/App.css
+++ b/src/App.css
@@ -134,3 +134,9 @@ td {
 		height: 3.75em;
 	}
 }
+
+@media screen and (max-width: 1000px) {
+	.popup-content {
+		width: auto;
+	}
+}
